--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -203,34 +203,34 @@
    "outputs": [],
    "source": [
     "# Sets de la catedra\n",
-    "pedidos_de_la_prensa_5, preseleccion_5 = obtener_preseleccion_y_pedidos_de_la_prensa(path_5)\n",
-    "pedidos_de_la_prensa_7, preseleccion_7 = obtener_preseleccion_y_pedidos_de_la_prensa(path_7)\n",
-    "pedidos_de_la_prensa_10_pocos, preseleccion_10_pocos = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_pocos)\n",
-    "pedidos_de_la_prensa_10_todos, preseleccion_10_todos = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_todos)\n",
-    "pedidos_de_la_prensa_10_varios, preseleccion_10_varios = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_varios)\n",
-    "pedidos_de_la_prensa_15, preseleccion_15 = obtener_preseleccion_y_pedidos_de_la_prensa(path_15)\n",
-    "pedidos_de_la_prensa_20, preseleccion_20 = obtener_preseleccion_y_pedidos_de_la_prensa(path_20)\n",
-    "pedidos_de_la_prensa_50, preseleccion_50 = obtener_preseleccion_y_pedidos_de_la_prensa(path_50)\n",
-    "pedidos_de_la_prensa_75, preseleccion_75 = obtener_preseleccion_y_pedidos_de_la_prensa(path_75)\n",
-    "pedidos_de_la_prensa_100, preseleccion_100 = obtener_preseleccion_y_pedidos_de_la_prensa(path_100)\n",
-    "pedidos_de_la_prensa_200, preseleccion_200 = obtener_preseleccion_y_pedidos_de_la_prensa(path_200)\n",
+    "pedidos_prensa_5, preseleccion_5 = obtener_preseleccion_y_pedidos_de_la_prensa(path_5)\n",
+    "pedidos_prensa_7, preseleccion_7 = obtener_preseleccion_y_pedidos_de_la_prensa(path_7)\n",
+    "pedidos_prensa_10_pocos, preseleccion_10_pocos = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_pocos)\n",
+    "pedidos_prensa_10_todos, preseleccion_10_todos = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_todos)\n",
+    "pedidos_prensa_10_varios, preseleccion_10_varios = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_varios)\n",
+    "pedidos_prensa_15, preseleccion_15 = obtener_preseleccion_y_pedidos_de_la_prensa(path_15)\n",
+    "pedidos_prensa_20, preseleccion_20 = obtener_preseleccion_y_pedidos_de_la_prensa(path_20)\n",
+    "pedidos_prensa_50, preseleccion_50 = obtener_preseleccion_y_pedidos_de_la_prensa(path_50)\n",
+    "pedidos_prensa_75, preseleccion_75 = obtener_preseleccion_y_pedidos_de_la_prensa(path_75)\n",
+    "pedidos_prensa_100, preseleccion_100 = obtener_preseleccion_y_pedidos_de_la_prensa(path_100)\n",
+    "pedidos_prensa_200, preseleccion_200 = obtener_preseleccion_y_pedidos_de_la_prensa(path_200)\n",
     "\n",
     "# Resultados esperados\n",
     "resultados_esperados = obtener_resultados_esperados(resultados_sets_catedra)\n",
-    "pedidos_de_la_prensa = [pedidos_de_la_prensa_5, pedidos_de_la_prensa_7, pedidos_de_la_prensa_10_pocos, pedidos_de_la_prensa_10_todos,\\\n",
-    "                        pedidos_de_la_prensa_10_varios, pedidos_de_la_prensa_15, pedidos_de_la_prensa_20, pedidos_de_la_prensa_50,\\\n",
-    "                        pedidos_de_la_prensa_75, pedidos_de_la_prensa_100, pedidos_de_la_prensa_200]\n",
+    "pedidos_prensa = [pedidos_prensa_5, pedidos_prensa_7, pedidos_prensa_10_pocos, pedidos_prensa_10_todos,\\\n",
+    "                        pedidos_prensa_10_varios, pedidos_prensa_15, pedidos_prensa_20, pedidos_prensa_50,\\\n",
+    "                        pedidos_prensa_75, pedidos_prensa_100, pedidos_prensa_200]\n",
     "\n",
     "# Sets nuestros\n",
-    "pedidos_de_la_prensa_5_nuestro, preseleccion_5_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_5_nuestro)\n",
-    "pedidos_de_la_prensa_15_nuestro, preseleccion_15_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_15_nuestro)\n",
-    "pedidos_de_la_prensa_15_un_elemento_nuestro, preseleccion_15_un_elemento_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_15_un_elemento_nuestro)\n",
-    "pedidos_de_la_prensa_20_nuestro, preseleccion_20_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_20_nuestro)\n",
-    "pedidos_de_la_prensa_50_nuestro, preseleccion_50_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_50_nuestro)\n",
+    "pedidos_prensa_5_nuestro, preseleccion_5_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_5_nuestro)\n",
+    "pedidos_prensa_15_nuestro, preseleccion_15_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_15_nuestro)\n",
+    "pedidos_prensa_15_un_elemento_nuestro, preseleccion_15_un_elemento_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_15_un_elemento_nuestro)\n",
+    "pedidos_prensa_20_nuestro, preseleccion_20_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_20_nuestro)\n",
+    "pedidos_prensa_50_nuestro, preseleccion_50_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_50_nuestro)\n",
     "\n",
     "archivos_nuestros = ['5.txt', '15.txt', '15_un_elemento.txt', '20.txt', '50.txt']\n",
-    "pedidos_de_la_prensa_nuestro = [pedidos_de_la_prensa_5_nuestro, pedidos_de_la_prensa_15_nuestro, pedidos_de_la_prensa_15_un_elemento_nuestro,\\\n",
-    "                                pedidos_de_la_prensa_20_nuestro, pedidos_de_la_prensa_50_nuestro]\n"
+    "pedidos_prensa_nuestro = [pedidos_prensa_5_nuestro, pedidos_prensa_15_nuestro, pedidos_prensa_15_un_elemento_nuestro,\\\n",
+    "                          pedidos_prensa_20_nuestro, pedidos_prensa_50_nuestro]\n"
    ]
   },
   {
@@ -343,11 +343,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solucion_5, tiempo_ejecucion_5 = solucion_para_Scaloni(preseleccion_5, pedidos_de_la_prensa_5)\n",
-    "solucion_7, tiempo_ejecucion_7 = solucion_para_Scaloni(preseleccion_7, pedidos_de_la_prensa_7)\n",
-    "solucion_10_pocos, tiempo_ejecucion_10_pocos = solucion_para_Scaloni(preseleccion_10_pocos, pedidos_de_la_prensa_10_pocos)\n",
-    "solucion_10_varios, tiempo_ejecucion_10_varios = solucion_para_Scaloni(preseleccion_10_varios, pedidos_de_la_prensa_10_varios)\n",
-    "solucion_10_todos, tiempo_ejecucion_10_todos = solucion_para_Scaloni(preseleccion_10_todos, pedidos_de_la_prensa_10_todos)"
+    "solucion_5, tiempo_ejecucion_5 = solucion_para_Scaloni(preseleccion_5, pedidos_prensa_5)\n",
+    "solucion_7, tiempo_ejecucion_7 = solucion_para_Scaloni(preseleccion_7, pedidos_prensa_7)\n",
+    "solucion_10_pocos, tiempo_ejecucion_10_pocos = solucion_para_Scaloni(preseleccion_10_pocos, pedidos_prensa_10_pocos)\n",
+    "solucion_10_varios, tiempo_ejecucion_10_varios = solucion_para_Scaloni(preseleccion_10_varios, pedidos_prensa_10_varios)\n",
+    "solucion_10_todos, tiempo_ejecucion_10_todos = solucion_para_Scaloni(preseleccion_10_todos, pedidos_prensa_10_todos)"
    ]
   },
   {
@@ -406,11 +406,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solucion_5_nuestro = solucion_para_Scaloni(preseleccion_5_nuestro, pedidos_de_la_prensa_5_nuestro)\n",
-    "solucion_15_nuestro = solucion_para_Scaloni(preseleccion_15_nuestro, pedidos_de_la_prensa_15_nuestro)\n",
-    "solucion_15_un_elemento_nuestro = solucion_para_Scaloni(preseleccion_15_un_elemento_nuestro, pedidos_de_la_prensa_15_un_elemento_nuestro)\n",
-    "solucion_20_nuestro = solucion_para_Scaloni(preseleccion_20_nuestro, pedidos_de_la_prensa_20_nuestro)\n",
-    "solucion_50_nuestro = solucion_para_Scaloni(preseleccion_50_nuestro, pedidos_de_la_prensa_50_nuestro)"
+    "solucion_5_nuestro = solucion_para_Scaloni(preseleccion_5_nuestro, pedidos_prensa_5_nuestro)\n",
+    "solucion_15_nuestro = solucion_para_Scaloni(preseleccion_15_nuestro, pedidos_prensa_15_nuestro)\n",
+    "solucion_15_un_elemento_nuestro = solucion_para_Scaloni(preseleccion_15_un_elemento_nuestro, pedidos_prensa_15_un_elemento_nuestro)\n",
+    "solucion_20_nuestro = solucion_para_Scaloni(preseleccion_20_nuestro, pedidos_prensa_20_nuestro)\n",
+    "solucion_50_nuestro = solucion_para_Scaloni(preseleccion_50_nuestro, pedidos_prensa_50_nuestro)"
    ]
   },
   {
@@ -442,7 +442,7 @@
     "resultados = []\n",
     "i = 0\n",
     "for resultado_obtenido in resultados_obtenidos_nuestros:\n",
-    "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_de_la_prensa_nuestro[i], resultado_obtenido) else \"No\"\n",
+    "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_prensa_nuestro[i], resultado_obtenido) else \"No\"\n",
     "  resultados.append([archivos_nuestros[i], len(resultado_obtenido), es_correcto]) \n",
     "  i += 1\n",
     "print(tabulate(resultados, headers=['Archivo', 'Cantidad minima obtenida', 'Es válida la soliución?']))"
@@ -520,17 +520,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solucion_5_lp, tiempo_ejecucion_5_lp = solucion_para_Scaloni_LP(preseleccion_5, pedidos_de_la_prensa_5)\n",
-    "solucion_7_lp, tiempo_ejecucion_7_lp = solucion_para_Scaloni_LP(preseleccion_7, pedidos_de_la_prensa_7)\n",
-    "solucion_10_pocos_lp, tiempo_ejecucion_10_pocos_lp = solucion_para_Scaloni_LP(preseleccion_10_pocos, pedidos_de_la_prensa_10_pocos)\n",
-    "solucion_10_varios_lp, tiempo_ejecucion_10_varios_lp = solucion_para_Scaloni_LP(preseleccion_10_varios, pedidos_de_la_prensa_10_varios)\n",
-    "solucion_10_todos_lp, tiempo_ejecucion_10_todos_lp = solucion_para_Scaloni_LP(preseleccion_10_todos, pedidos_de_la_prensa_10_todos)\n",
-    "solucion_15_lp, tiempo_ejecucion_15_lp = solucion_para_Scaloni_LP(preseleccion_15, pedidos_de_la_prensa_15)\n",
-    "solucion_20_lp, tiempo_ejecucion_20_lp = solucion_para_Scaloni_LP(preseleccion_20, pedidos_de_la_prensa_20)\n",
-    "solucion_50_lp, tiempo_ejecucion_50_lp = solucion_para_Scaloni_LP(preseleccion_50, pedidos_de_la_prensa_50)\n",
-    "solucion_75_lp, tiempo_ejecucion_75_lp = solucion_para_Scaloni_LP(preseleccion_75, pedidos_de_la_prensa_75)\n",
-    "solucion_100_lp, tiempo_ejecucion_100_lp = solucion_para_Scaloni_LP(preseleccion_100, pedidos_de_la_prensa_100)\n",
-    "solucion_200_lp, tiempo_ejecucion_200_lp = solucion_para_Scaloni_LP(preseleccion_200, pedidos_de_la_prensa_200)"
+    "solucion_5_lp, tiempo_ejecucion_5_lp = solucion_para_Scaloni_LP(preseleccion_5, pedidos_prensa_5)\n",
+    "solucion_7_lp, tiempo_ejecucion_7_lp = solucion_para_Scaloni_LP(preseleccion_7, pedidos_prensa_7)\n",
+    "solucion_10_pocos_lp, tiempo_ejecucion_10_pocos_lp = solucion_para_Scaloni_LP(preseleccion_10_pocos, pedidos_prensa_10_pocos)\n",
+    "solucion_10_varios_lp, tiempo_ejecucion_10_varios_lp = solucion_para_Scaloni_LP(preseleccion_10_varios, pedidos_prensa_10_varios)\n",
+    "solucion_10_todos_lp, tiempo_ejecucion_10_todos_lp = solucion_para_Scaloni_LP(preseleccion_10_todos, pedidos_prensa_10_todos)\n",
+    "solucion_15_lp, tiempo_ejecucion_15_lp = solucion_para_Scaloni_LP(preseleccion_15, pedidos_prensa_15)\n",
+    "solucion_20_lp, tiempo_ejecucion_20_lp = solucion_para_Scaloni_LP(preseleccion_20, pedidos_prensa_20)\n",
+    "solucion_50_lp, tiempo_ejecucion_50_lp = solucion_para_Scaloni_LP(preseleccion_50, pedidos_prensa_50)\n",
+    "solucion_75_lp, tiempo_ejecucion_75_lp = solucion_para_Scaloni_LP(preseleccion_75, pedidos_prensa_75)\n",
+    "solucion_100_lp, tiempo_ejecucion_100_lp = solucion_para_Scaloni_LP(preseleccion_100, pedidos_prensa_100)\n",
+    "solucion_200_lp, tiempo_ejecucion_200_lp = solucion_para_Scaloni_LP(preseleccion_200, pedidos_prensa_200)"
    ]
   },
   {
@@ -561,10 +561,10 @@
    "source": [
     "resultados_obtenidos_lp = arreglar_resultados([solucion_5_lp, solucion_7_lp, solucion_10_pocos_lp, solucion_10_varios_lp, solucion_10_todos_lp,\\\n",
     "                        solucion_15_lp, solucion_20_lp,solucion_50_lp, solucion_75_lp, solucion_100_lp, solucion_200_lp])\n",
-    "pedidos_de_la_prensa_lp = [pedidos_de_la_prensa_5, pedidos_de_la_prensa_7, pedidos_de_la_prensa_10_pocos,\\\n",
-    "                          pedidos_de_la_prensa_10_varios, pedidos_de_la_prensa_10_todos, pedidos_de_la_prensa_15,\\\n",
-    "                          pedidos_de_la_prensa_20, pedidos_de_la_prensa_50, pedidos_de_la_prensa_75, pedidos_de_la_prensa_100,\\\n",
-    "                          pedidos_de_la_prensa_200]\n",
+    "pedidos_prensa_lp = [pedidos_prensa_5, pedidos_prensa_7, pedidos_prensa_10_pocos,\\\n",
+    "                          pedidos_prensa_10_varios, pedidos_prensa_10_todos, pedidos_prensa_15,\\\n",
+    "                          pedidos_prensa_20, pedidos_prensa_50, pedidos_prensa_75, pedidos_prensa_100,\\\n",
+    "                          pedidos_prensa_200]\n",
     "\n",
     "tiempos_ejecucion_lp = [tiempo_ejecucion_5_lp, tiempo_ejecucion_7_lp, tiempo_ejecucion_10_pocos_lp, tiempo_ejecucion_10_varios_lp,\\\n",
     "                      tiempo_ejecucion_10_todos_lp, tiempo_ejecucion_15_lp, tiempo_ejecucion_20_lp, tiempo_ejecucion_50_lp,\\\n",
@@ -575,7 +575,7 @@
     "i = 0\n",
     "for resultado_esperado in resultados_esperados:\n",
     "  es_correcto = \"Sí\" if resultado_esperado.cantidad_minima == len(resultados_obtenidos_lp[i]) and \\\n",
-    "    verificar_solucion_para_Scaloni(pedidos_de_la_prensa_lp[i],resultados_obtenidos_lp[i]) else \"No\"\n",
+    "    verificar_solucion_para_Scaloni(pedidos_prensa_lp[i],resultados_obtenidos_lp[i]) else \"No\"\n",
     "  resultados_lp.append([resultado_esperado.nombre_archivo, resultado_esperado.cantidad_minima, len(resultados_obtenidos_lp[i]), es_correcto, tiempos_ejecucion_lp[i]]) \n",
     "  i += 1\n",
     "\n",
@@ -595,12 +595,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solucion_5_lp_nuestro, tiempo_ejecucion_5_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_5_nuestro, pedidos_de_la_prensa_5_nuestro)\n",
-    "solucion_15_lp_nuestro, tiempo_ejecucion_15_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_15_nuestro, pedidos_de_la_prensa_15_nuestro)\n",
+    "solucion_5_lp_nuestro, tiempo_ejecucion_5_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_5_nuestro, pedidos_prensa_5_nuestro)\n",
+    "solucion_15_lp_nuestro, tiempo_ejecucion_15_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_15_nuestro, pedidos_prensa_15_nuestro)\n",
     "solucion_15_un_elemento_lp_nuestro, tiempo_ejecucion_15_un_elemento_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_15_un_elemento_nuestro,\\\n",
-    "                                                                                  pedidos_de_la_prensa_15_un_elemento_nuestro)\n",
-    "solucion_20_lp_nuestro, tiempo_ejecucion_20_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_20_nuestro, pedidos_de_la_prensa_20_nuestro)\n",
-    "solucion_50_lp_nuestro, tiempo_ejecucion_50_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_50_nuestro, pedidos_de_la_prensa_50_nuestro)"
+    "                                                                                  pedidos_prensa_15_un_elemento_nuestro)\n",
+    "solucion_20_lp_nuestro, tiempo_ejecucion_20_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_20_nuestro, pedidos_prensa_20_nuestro)\n",
+    "solucion_50_lp_nuestro, tiempo_ejecucion_50_lp_nuestro = solucion_para_Scaloni_LP(preseleccion_50_nuestro, pedidos_prensa_50_nuestro)"
    ]
   },
   {
@@ -639,7 +639,7 @@
     "resultados_lp_nuestros = []\n",
     "i = 0\n",
     "for resultado_obtenido in resultados_obtenidos_nuestros_lp:\n",
-    "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_de_la_prensa_nuestro[i],resultados_obtenidos_nuestros_lp[i]) else \"No\"\n",
+    "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_prensa_nuestro[i],resultados_obtenidos_nuestros_lp[i]) else \"No\"\n",
     "  resultados_lp_nuestros.append([archivos_nuestros[i], len(resultados_obtenidos_nuestros_lp[i]), es_correcto, tiempos_ejecucion_lp[i]]) \n",
     "  i += 1\n",
     "\n",
