corro con los nuesvos txt generados + arreglo funcion backtracking

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,9 +217,9 @@
     "\n",
     "# Resultados esperados\n",
     "resultados_esperados = obtener_resultados_esperados(resultados_sets_catedra)\n",
-    "pedidos_prensa = [pedidos_prensa_5, pedidos_prensa_7, pedidos_prensa_10_pocos, pedidos_prensa_10_todos,\\\n",
-    "                        pedidos_prensa_10_varios, pedidos_prensa_15, pedidos_prensa_20, pedidos_prensa_50,\\\n",
-    "                        pedidos_prensa_75, pedidos_prensa_100, pedidos_prensa_200]\n",
+    "pedidos_prensa = [pedidos_prensa_5, pedidos_prensa_7, pedidos_prensa_10_pocos,pedidos_prensa_10_varios,\\\n",
+    "                  pedidos_prensa_10_todos, pedidos_prensa_15, pedidos_prensa_20, pedidos_prensa_50,\\\n",
+    "                  pedidos_prensa_75, pedidos_prensa_100, pedidos_prensa_200]\n",
     "\n",
     "# Sets nuestros\n",
     "pedidos_prensa_5_nuestro, preseleccion_5_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_5_nuestro)\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Colidio', \"Barcon't\"], 0.03038787841796875)\n"
+      "(['Colidio', \"Barcon't\"], 0.011459589004516602)\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,19 +352,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "resultados_esperados_reducido = resultados_esperados[:5]\n",
-    "pedidos_de_la_prensa_reducido = pedidos_de_la_prensa[:5]\n",
     "resultados_obtenidos = [solucion_5, solucion_7, solucion_10_pocos,solucion_10_varios, solucion_10_todos]\n",
     "tiempos_ejecucion = [tiempo_ejecucion_5, tiempo_ejecucion_7, tiempo_ejecucion_10_pocos, tiempo_ejecucion_10_varios, tiempo_ejecucion_10_todos]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -373,11 +372,11 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                 0.00398779\n",
-      "7.txt                                   2                           2  Sí                                                 0.018889\n",
-      "10_pocos.txt                            3                           3  Sí                                                 0.542281\n",
-      "10_varios.txt                           6                           6  Sí                                                60.9184\n",
-      "10_todos.txt                           10                          10  Sí                                               956.16\n"
+      "5.txt                                   2                           2  Sí                                                 0.00139999\n",
+      "7.txt                                   2                           2  Sí                                                 0.00930905\n",
+      "10_pocos.txt                            3                           3  Sí                                                 0.682141\n",
+      "10_varios.txt                           6                           6  Sí                                                59.7369\n",
+      "10_todos.txt                           10                          10  Sí                                               919.637\n"
      ]
     }
    ],
@@ -387,7 +386,7 @@
     "i = 0\n",
     "for resultado_esperado in resultados_esperados_reducido:\n",
     "  es_correcto = \"Sí\" if resultado_esperado.cantidad_minima == len(resultados_obtenidos[i]) and \\\n",
-    "    verificar_solucion_para_Scaloni(pedidos_de_la_prensa_reducido[i], resultados_obtenidos[i]) else \"No\"\n",
+    "    verificar_solucion_para_Scaloni(pedidos_prensa[i], resultados_obtenidos[i]) else \"No\"\n",
     "  resultados.append([resultado_esperado.nombre_archivo, resultado_esperado.cantidad_minima, len(resultados_obtenidos[i]), es_correcto, tiempos_ejecucion[i]]) \n",
     "  i += 1\n",
     "print(tabulate(resultados, headers=['Archivo', 'Cantidad mínima esperada', 'Cantidad mínima obtenida', 'Se obtuvo el resultado esperado?', 'Tiempo de ejecución (s)']))"
@@ -402,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,25 +414,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resultados_obtenidos_nuestros = [solucion_5_nuestro, solucion_15_nuestro, solucion_15_un_elemento_nuestro, solucion_20_nuestro, solucion_50_nuestro]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo      Cantidad minima obtenida  Es válida la soliución?\n",
-      "---------  --------------------------  -------------------------\n",
-      "5.txt                               3  Sí\n"
+      "[['Riquelme'], ['Armani'], [\"Barcon't\"], ['Burrito Ortega'], ['Colo Barco'], ['Casco'], ['Chiquito Romero'], ['Cuti Romero'], ['Riquelme'], ['El fantasma de la B'], ['Tucu Pereyra'], ['Simeone'], ['Di Maria'], ['Dybala'], ['Buendia']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultados_obtenidos_nuestros = [solucion_5_nuestro, solucion_15_nuestro, solucion_15_un_elemento_nuestro, solucion_20_nuestro, solucion_50_nuestro]\n",
+    "print(preseleccion_15_un_elemento_nuestro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(['Cuti Romero', 'Beltran', 'Soule'], 0.002166748046875)\n",
+      "(['Messi', 'Casco', 'Palermo', 'El fantasma de la B', 'Chiquito Romero'], 7605.932104349136)\n",
+      "([], 0.0520327091217041)\n",
+      "(['Messi', 'Armani', 'Casco', 'Simeone', 'Riquelme', 'Pity Martinez'], 3032.278930425644)\n",
+      "(['Pezzella', 'Burrito Ortega', 'Messi', 'Cuti Romero', 'Langoni', 'Simeone', 'Chiquito Romero', 'Luka Romero', 'Zapelli', 'Colo Barco', 'Changuito Zeballos', 'Tucu Pereyra', 'Ogro Fabianni', 'Palermo', 'Dibu', 'Mauro Zarate', 'Riquelme', 'Buendia', 'Dybala', 'Armani'], 4992.127532482147)\n",
+      "Archivo               Cantidad minima obtenida  Es válida la soliución?      Tiempo de ejecución (s)\n",
+      "------------------  --------------------------  -------------------------  -------------------------\n",
+      "5.txt                                        3  Sí                                        0.00216675\n",
+      "15.txt                                       5  Sí                                     7605.93\n",
+      "15_un_elemento.txt                           0  No                                        0.0520327\n",
+      "20.txt                                       6  Sí                                     3032.28\n",
+      "50.txt                                      20  Sí                                     4992.13\n"
      ]
     }
    ],
@@ -442,10 +459,11 @@
     "resultados = []\n",
     "i = 0\n",
     "for resultado_obtenido in resultados_obtenidos_nuestros:\n",
-    "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_prensa_nuestro[i], resultado_obtenido) else \"No\"\n",
-    "  resultados.append([archivos_nuestros[i], len(resultado_obtenido), es_correcto]) \n",
+    "  print(resultado_obtenido)\n",
+    "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_prensa_nuestro[i], resultado_obtenido[0]) else \"No\"\n",
+    "  resultados.append([archivos_nuestros[i], len(resultado_obtenido[0]), es_correcto,resultado_obtenido[1] ]) \n",
     "  i += 1\n",
-    "print(tabulate(resultados, headers=['Archivo', 'Cantidad minima obtenida', 'Es válida la soliución?']))"
+    "print(tabulate(resultados, headers=['Archivo', 'Cantidad minima obtenida', 'Es válida la soliución?', 'Tiempo de ejecución (s)']))"
    ]
   },
   {
@@ -457,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -544,17 +562,17 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                 0.0200076\n",
-      "7.txt                                   2                           2  Sí                                                 0.0100768\n",
-      "10_pocos.txt                            3                           3  Sí                                                 0.0182559\n",
-      "10_varios.txt                           6                           6  Sí                                                 0.00951242\n",
-      "10_todos.txt                           10                          10  Sí                                                 0.00920391\n",
-      "15.txt                                  4                           4  Sí                                                 0.0154207\n",
-      "20.txt                                  5                           5  Sí                                                 0.0157976\n",
-      "50.txt                                  6                           6  Sí                                                 0.0150127\n",
-      "75.txt                                  8                           8  Sí                                                 0.311656\n",
-      "100.txt                                 9                           9  Sí                                                 0.391315\n",
-      "200.txt                                 9                           9  Sí                                                 1.0691\n"
+      "5.txt                                   2                           2  Sí                                                 0.0127537\n",
+      "7.txt                                   2                           2  Sí                                                 0.0107014\n",
+      "10_pocos.txt                            3                           3  Sí                                                 0.0112841\n",
+      "10_varios.txt                           6                           6  Sí                                                 0.0105374\n",
+      "10_todos.txt                           10                          10  Sí                                                 0.00873256\n",
+      "15.txt                                  4                           4  Sí                                                 0.0154879\n",
+      "20.txt                                  5                           5  Sí                                                 0.0137143\n",
+      "50.txt                                  6                           6  Sí                                                 0.019594\n",
+      "75.txt                                  8                           8  Sí                                                 0.317014\n",
+      "100.txt                                 9                           9  Sí                                                 0.403747\n",
+      "200.txt                                 9                           9  Sí                                                 0.978266\n"
      ]
     }
    ],
@@ -605,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -626,11 +644,11 @@
      "text": [
       "Archivo               Cantidad mínima obtenida  Es válida?      Tiempo de ejecución (s)\n",
       "------------------  --------------------------  ------------  -------------------------\n",
-      "5.txt                                        3  Sí                           0.0200076\n",
-      "15.txt                                       4  Sí                           0.0100768\n",
-      "15_un_elemento.txt                          14  Sí                           0.0182559\n",
-      "20.txt                                       6  Sí                           0.00951242\n",
-      "50.txt                                      20  Sí                           0.00920391\n"
+      "5.txt                                        3  Sí                           0.0127537\n",
+      "15.txt                                       4  Sí                           0.0107014\n",
+      "15_un_elemento.txt                          14  Sí                           0.0112841\n",
+      "20.txt                                       6  Sí                           0.0105374\n",
+      "50.txt                                      20  Sí                           0.00873256\n"
      ]
     }
    ],
