corro con los nuesvos txt generados + arreglo funcion backtracking

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Colidio', \"Barcon't\"], 0.011459589004516602)\n"
+      "(['Colidio', \"Barcon't\"], 0.04179191589355469)\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
     "    if(cantidad_de_jugadores >= len(pedidos_de_prensa) or cantidad_de_jugadores >= max_jugadores):\n",
     "        return \n",
     "    \n",
-    "    for i in range(indice, (len(preseleccion)-1)):\n",
+    "    for i in range(indice, (len(preseleccion))):\n",
     "        solucion_actual.append(preseleccion[(i)])\n",
     "        if verificar_solucion_para_Scaloni(pedidos_de_prensa, solucion_actual):\n",
     "            if len(solucion_actual) < len(solucion) or len(solucion) == 0:\n",
@@ -304,7 +304,7 @@
     "    solucion = []\n",
     "    solucion_actual = []\n",
     "    tiempo_inicial = time.time()\n",
-    "    max_jugadores = len(set([pedido for pedidos in pedidos_de_prensa for pedido in pedidos])) # ver complejidad\n",
+    "    max_jugadores = len(preseleccion) # ver complejidad\n",
     "    conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, 0, solucion, max_jugadores)\n",
     "    tiempo_final = time.time()\n",
     "    tiempo_ejecucion = tiempo_final - tiempo_inicial\n",
@@ -414,41 +414,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 180,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['Riquelme'], ['Armani'], [\"Barcon't\"], ['Burrito Ortega'], ['Colo Barco'], ['Casco'], ['Chiquito Romero'], ['Cuti Romero'], ['Riquelme'], ['El fantasma de la B'], ['Tucu Pereyra'], ['Simeone'], ['Di Maria'], ['Dybala'], ['Buendia']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "resultados_obtenidos_nuestros = [solucion_5_nuestro, solucion_15_nuestro, solucion_15_un_elemento_nuestro, solucion_20_nuestro, solucion_50_nuestro]\n",
-    "print(preseleccion_15_un_elemento_nuestro)"
+    "resultados_obtenidos_nuestros = [solucion_5_nuestro, solucion_15_nuestro, solucion_15_un_elemento_nuestro, solucion_20_nuestro, solucion_50_nuestro]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Cuti Romero', 'Beltran', 'Soule'], 0.002166748046875)\n",
-      "(['Messi', 'Casco', 'Palermo', 'El fantasma de la B', 'Chiquito Romero'], 7605.932104349136)\n",
-      "([], 0.0520327091217041)\n",
-      "(['Messi', 'Armani', 'Casco', 'Simeone', 'Riquelme', 'Pity Martinez'], 3032.278930425644)\n",
-      "(['Pezzella', 'Burrito Ortega', 'Messi', 'Cuti Romero', 'Langoni', 'Simeone', 'Chiquito Romero', 'Luka Romero', 'Zapelli', 'Colo Barco', 'Changuito Zeballos', 'Tucu Pereyra', 'Ogro Fabianni', 'Palermo', 'Dibu', 'Mauro Zarate', 'Riquelme', 'Buendia', 'Dybala', 'Armani'], 4992.127532482147)\n",
       "Archivo               Cantidad minima obtenida  Es válida la soliución?      Tiempo de ejecución (s)\n",
       "------------------  --------------------------  -------------------------  -------------------------\n",
       "5.txt                                        3  Sí                                        0.00216675\n",
       "15.txt                                       5  Sí                                     7605.93\n",
-      "15_un_elemento.txt                           0  No                                        0.0520327\n",
+      "15_un_elemento.txt                          14  Sí                                        0.20838\n",
       "20.txt                                       6  Sí                                     3032.28\n",
       "50.txt                                      20  Sí                                     4992.13\n"
      ]
@@ -459,7 +445,6 @@
     "resultados = []\n",
     "i = 0\n",
     "for resultado_obtenido in resultados_obtenidos_nuestros:\n",
-    "  print(resultado_obtenido)\n",
     "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_prensa_nuestro[i], resultado_obtenido[0]) else \"No\"\n",
     "  resultados.append([archivos_nuestros[i], len(resultado_obtenido[0]), es_correcto,resultado_obtenido[1] ]) \n",
     "  i += 1\n",
