--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -21,7 +21,9 @@
    "outputs": [],
    "source": [
     "#Verificamos la solucion polinomialmente\n",
-    "def verificar_solucion(B, C):\n",
+    "def verificar_solucion(B, C, k):\n",
+    "    if len(C) > k:\n",
+    "        return False\n",
     "    satisface_Bi = [False] * len(B)\n",
     "\n",
     "    for c in C:                      # O(#C) \n",
